# dpdk

./: meson_options.txt
config/: common_base  common_linux
doc/guides/nics/: fm10k.rst
doc/guides/rel_notes/: release_20_05.rst
drivers/net/fm10k/: Makefile  fm10k_ethdev.c  meson.build
drivers/net/fm10k/base/: fm10k_type.h
drivers/net/fm10k/switch/: fm10k_config.c  fm10k_config.h  fm10k_debug.h  fm10k_ext_port.c  fm10k_ext_port.h  fm10k_ffu.c  fm10k_ffu.h  fm10k_flow.c  fm10k_flow.h  fm10k_i2c.c  fm10k_i2c.h  fm10k_regs.h  fm10k_sbus.c  fm10k_sbus.h  fm10k_serdes.c  fm10k_serdes.h  fm10k_sm.c  fm10k_sm.h  fm10k_spico_code.c  fm10k_spico_code.h  fm10k_stats.c  fm10k_stats.h  fm10k_switch.c  fm10k_switch.h  meson.build
